--- a/frontend/src/app/ramp/page.module.css
+++ b/frontend/src/app/ramp/page.module.css
@@ -16,10 +16,6 @@
     padding-top: 5px;
 }
 
-.buttons-container {
-    margin-top: auto;
-}
-
 .button-link {
     text-decoration: underline;
     border: 0px;
