--- a/frontend/src/components/QRCode.module.css
+++ b/frontend/src/components/QRCode.module.css
@@ -1,6 +1,4 @@
 .qr-container {
-    margin-top: 56px;
-    margin-bottom: auto;
     border-radius: 14px;
     overflow: hidden;
 }
